--- a/ProRandomChat/src/main/resources/com/example/prorandomchata/chatTab.fxml
+++ b/ProRandomChat/src/main/resources/com/example/prorandomchata/chatTab.fxml
@@ -9,15 +9,18 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="666.0" prefWidth="760.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.prorandomchata.chatTabController">
    <children>
       <TextArea fx:id="textTyping" layoutX="5.0" layoutY="550.0" prefHeight="111.0" prefWidth="641.0" />
-      <Button fx:id="sendBtn" layoutX="651.0" layoutY="550.0" mnemonicParsing="false" prefHeight="111.0" prefWidth="106.0" text="Send" />
+      <Button fx:id="sendBtn" layoutX="651.0" layoutY="550.0" mnemonicParsing="false" onAction="#send" prefHeight="111.0" prefWidth="106.0" text="Send" />
       <TextArea fx:id="textHistory" layoutX="5.0" layoutY="118.0" prefHeight="430.0" prefWidth="751.0" />
       <ImageView fx:id="receiverAvatar" fitHeight="90.0" fitWidth="90.0" layoutX="31.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
       <Label fx:id="receiverName" layoutX="144.0" layoutY="14.0" text="Name" />
       <Label fx:id="receiverAge" layoutX="146.0" layoutY="42.0" text="Age" />
       <Label fx:id="receiverGender" layoutX="201.0" layoutY="42.0" text="Gender" />
       <Label fx:id="receiverLocation" layoutX="143.0" layoutY="77.0" text="Location" />
-      <Button fx:id="viewBtn" layoutX="632.0" layoutY="17.0" mnemonicParsing="false" onAction="#view" text="View Profile" />
-      <Button fx:id="addFriendBtn" layoutX="632.0" layoutY="44.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="79.0" text="Add Friend" />
-      <Button fx:id="blockBtn" layoutX="632.0" layoutY="71.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="79.0" text="Block" />
+      <Button fx:id="viewBtn" layoutX="543.0" layoutY="32.0" mnemonicParsing="false" onAction="#view" text="View Profile" />
+      <Button fx:id="addFriendBtn" layoutX="543.0" layoutY="65.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="79.0" text="Add Friend" />
+      <Button fx:id="disconnectBtn" layoutX="635.0" layoutY="41.0" mnemonicParsing="false" onAction="#disconnect" prefHeight="39.0" prefWidth="79.0" text="Disconnect" />
+      <Label fx:id="coverLayer" layoutX="6.0" layoutY="5.0" prefHeight="655.0" prefWidth="751.0" />
+      <Button fx:id="connectBtn" layoutX="331.0" layoutY="308.0" mnemonicParsing="false" onAction="#connect" prefHeight="50.0" prefWidth="104.0" text="Connect" />
+      <Button fx:id="nextBtn" layoutX="338.0" layoutY="41.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="90.0" text="Next" />
    </children>
 </AnchorPane>
