--- a/ProRandomChat/src/main/resources/com/example/prorandomchata/profileTab.fxml
+++ b/ProRandomChat/src/main/resources/com/example/prorandomchata/profileTab.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="666.0" prefWidth="760.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.prorandomchata.profileTabController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="666.0" prefWidth="760.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.prorandomchata.ProfileTabController">
    <children>
       <Label fx:id="userName" layoutX="98.0" layoutY="99.0" text="Username:" />
       <Label fx:id="userAge" layoutX="98.0" layoutY="184.0" text="Age:" />
