--- a/ProRandomChat/src/main/resources/com/example/prorandomchata/selfProfile.fxml
+++ b/ProRandomChat/src/main/resources/com/example/prorandomchata/selfProfile.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="666.0" prefWidth="760.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.prorandomchata.selfProfileController">
+<AnchorPane prefHeight="666.0" prefWidth="760.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.prorandomchata.SelfProfileController">
    <children>
       <Label fx:id="userAge" layoutX="92.0" layoutY="235.0" text="Age" />
       <Label fx:id="userGender" layoutX="229.0" layoutY="234.0" text="Gender" />
