--- a/ProRandomChat/src/main/resources/com/example/prorandomchata/test.fxml
+++ b/ProRandomChat/src/main/resources/com/example/prorandomchata/test.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.prorandomchata.testController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.prorandomchata.TestController">
    <children>
       <ImageView fx:id="imgv" fitHeight="150.0" fitWidth="200.0" layoutX="200.0" layoutY="125.0" pickOnBounds="true" preserveRatio="true" />
       <Button layoutX="218.0" layoutY="318.0" mnemonicParsing="false" onAction="#set" text="Button" />
