--- a/ProRandomChat/src/main/resources/com/example/prorandomchata/chatTab.fxml
+++ b/ProRandomChat/src/main/resources/com/example/prorandomchata/chatTab.fxml
@@ -1,26 +1,131 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="666.0" prefWidth="760.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.prorandomchata.ChatTabController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="666.0" prefWidth="770.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.prorandomchata.ChatTabController">
    <children>
-      <TextArea fx:id="textTyping" layoutX="5.0" layoutY="550.0" prefHeight="111.0" prefWidth="641.0" />
-      <Button fx:id="sendBtn" layoutX="651.0" layoutY="550.0" mnemonicParsing="false" onAction="#send" prefHeight="111.0" prefWidth="106.0" text="Send" />
-      <TextArea fx:id="textHistory" layoutX="5.0" layoutY="118.0" prefHeight="430.0" prefWidth="751.0" />
+      <TextArea fx:id="textTyping" layoutX="4.0" layoutY="549.0" prefHeight="111.0" prefWidth="641.0">
+         <font>
+            <Font name="BreeSerif" size="18.0" />
+         </font></TextArea>
+      <Button fx:id="sendBtn" layoutX="649.0" layoutY="549.0" mnemonicParsing="false" onAction="#send" prefHeight="111.0" prefWidth="117.0" text="SEND">
+         <font>
+            <Font name="BreeSerif" size="12.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
+      <TextArea fx:id="textHistory" layoutX="4.0" layoutY="115.0" prefHeight="430.0" prefWidth="762.0">
+         <font>
+            <Font name="BreeSerif" size="18.0" />
+         </font></TextArea>
       <ImageView fx:id="receiverAvatar" fitHeight="90.0" fitWidth="90.0" layoutX="31.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
-      <Label fx:id="receiverName" layoutX="144.0" layoutY="14.0" text="Name" />
-      <Label fx:id="receiverAge" layoutX="146.0" layoutY="42.0" text="Age" />
-      <Label fx:id="receiverGender" layoutX="201.0" layoutY="42.0" text="Gender" />
-      <Label fx:id="receiverLocation" layoutX="143.0" layoutY="77.0" text="Location" />
-      <Button fx:id="viewBtn" layoutX="543.0" layoutY="32.0" mnemonicParsing="false" onAction="#view" text="View Profile" />
-      <Button fx:id="addFriendBtn" layoutX="543.0" layoutY="65.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="79.0" text="Add Friend" />
-      <Label fx:id="coverLayer" layoutX="6.0" layoutY="5.0" prefHeight="655.0" prefWidth="751.0" visible="false" />
-      <Button fx:id="disconnectBtn" layoutX="631.0" layoutY="45.0" mnemonicParsing="false" onAction="#disconnect" prefHeight="39.0" prefWidth="79.0" text="Disconnect" />
-      <Button fx:id="connectBtn" layoutX="331.0" layoutY="308.0" mnemonicParsing="false" onAction="#connect" prefHeight="50.0" prefWidth="104.0" text="Connect" />
-      <Button fx:id="nextBtn" layoutX="338.0" layoutY="41.0" mnemonicParsing="false" onAction="#next" prefHeight="37.0" prefWidth="90.0" text="Next" />
+      <Label fx:id="receiverName" layoutX="144.0" layoutY="14.0">
+         <font>
+            <Font name="iCielMijas-Ultra" size="16.0" />
+         </font></Label>
+      <Label fx:id="receiverAge" layoutX="145.0" layoutY="44.0">
+         <font>
+            <Font name="iCielMijas-Ultra" size="16.0" />
+         </font></Label>
+      <Label fx:id="receiverGender" layoutX="201.0" layoutY="42.0">
+         <font>
+            <Font name="iCielMijas-Ultra" size="16.0" />
+         </font></Label>
+      <Label fx:id="receiverLocation" layoutX="143.0" layoutY="77.0">
+         <font>
+            <Font name="iCielMijas-Ultra" size="16.0" />
+         </font></Label>
+      <Button fx:id="viewBtn" layoutX="543.0" layoutY="35.0" mnemonicParsing="false" onAction="#view" prefHeight="25.0" prefWidth="91.0" text="Xem hồ sơ">
+         <font>
+            <Font name="BreeSerif" size="12.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
+      <Button fx:id="addFriendBtn" layoutX="543.0" layoutY="65.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="91.0" text="Kết bạn">
+         <font>
+            <Font name="BreeSerif" size="12.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
+      <Label fx:id="coverLayer" alignment="CENTER" layoutX="4.0" layoutY="5.0" prefHeight="655.0" prefWidth="764.0" text="Đang kết nối...">
+         <font>
+            <Font name="Segoe UI" size="16.0" />
+         </font></Label>
+      <Button fx:id="disconnectBtn" layoutX="638.0" layoutY="34.0" mnemonicParsing="false" onAction="#disconnect" prefHeight="25.0" prefWidth="105.0" text="Ngắt kết nối">
+         <font>
+            <Font name="BreeSerif" size="12.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
+      <Button fx:id="connectBtn" layoutX="331.0" layoutY="308.0" mnemonicParsing="false" onAction="#connect" prefHeight="50.0" prefWidth="104.0" text="Kết nối" visible="false">
+         <font>
+            <Font name="BreeSerif" size="15.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
+      <Button fx:id="nextBtn" layoutX="335.0" layoutY="47.0" mnemonicParsing="false" onAction="#next" prefHeight="37.0" prefWidth="90.0" text="Chat mới">
+         <font>
+            <Font name="BreeSerif" size="12.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor></Button>
+      <TitledPane fx:id="settings" alignment="CENTER" animated="false" contentDisplay="TOP" layoutX="639.0" layoutY="65.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" nodeOrientation="LEFT_TO_RIGHT" prefHeight="112.0" prefWidth="104.0" text="Cài đặt">
+        <content>
+          <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="0.0" minWidth="0.0" prefHeight="120.0" prefWidth="102.0">
+               <children>
+                  <RadioButton fx:id="onlyMale" alignment="BOTTOM_RIGHT" contentDisplay="TOP" layoutX="34.0" layoutY="25.0" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" onAction="#setOnlyMale" prefHeight="17.0" prefWidth="60.0" text="Nam" textOverrun="WORD_ELLIPSIS">
+                     <toggleGroup>
+                        <ToggleGroup fx:id="gender" />
+                     </toggleGroup>
+                     <font>
+                        <Font name="BreeSerif" size="12.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </RadioButton>
+                  <RadioButton fx:id="onlyFemale" alignment="BOTTOM_RIGHT" contentDisplay="TOP" layoutX="34.0" layoutY="44.0" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" onAction="#setOnlyFemale" prefHeight="17.0" prefWidth="60.0" text="Nữ" toggleGroup="$gender">
+                     <font>
+                        <Font name="BreeSerif" size="12.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor></RadioButton>
+                  <RadioButton fx:id="allGender" alignment="BOTTOM_RIGHT" contentDisplay="TOP" layoutX="34.0" layoutY="62.0" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" onAction="#setAllGender" prefHeight="17.0" prefWidth="60.0" text="Tất cả" toggleGroup="$gender">
+                     <font>
+                        <Font name="BreeSerif" size="12.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor></RadioButton>
+                  <Label layoutX="4.0" layoutY="6.0" text="Tiêu chí giới tính:">
+                     <font>
+                        <Font name="BreeSerif" size="12.0" />
+                     </font></Label>
+               </children>
+            </AnchorPane>
+        </content>
+         <font>
+            <Font name="BreeSerif" size="12.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </TitledPane>
    </children>
 </AnchorPane>
