--- a/ProRandomChat/src/main/resources/com/example/prorandomchata/loginForm.fxml
+++ b/ProRandomChat/src/main/resources/com/example/prorandomchata/loginForm.fxml
@@ -8,28 +8,60 @@
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="650.0" prefWidth="480.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.prorandomchata.LoginController">
+<AnchorPane cacheShape="false" centerShape="false" prefHeight="478.0" prefWidth="789.0" scaleShape="false" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.prorandomchata.LoginController">
    <children>
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="147.0" layoutY="33.0" prefHeight="86.0" prefWidth="203.0" text="PRO RANDOM CHAT" />
-      <Label alignment="CENTER" layoutX="227.0" layoutY="119.0" prefHeight="36.0" prefWidth="43.0" text="Login:" />
-      <Label layoutX="48.0" layoutY="169.0" text="Username:" />
-      <Label layoutX="48.0" layoutY="217.0" text="Password:" />
-      <PasswordField fx:id="loginPassword" layoutX="131.0" layoutY="213.0" prefHeight="25.0" prefWidth="318.0" promptText="Password" />
-      <TextField fx:id="loginUsername" layoutX="131.0" layoutY="165.0" prefHeight="25.0" prefWidth="318.0" promptText="Username" />
-      <Button layoutX="386.0" layoutY="249.0" mnemonicParsing="false" onAction="#login" prefHeight="36.0" prefWidth="74.0" text="Login">
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-      </Button>
-      <Label alignment="CENTER" layoutX="226.0" layoutY="297.0" text="Register:" />
-      <Label layoutX="51.0" layoutY="340.0" text="Username:" />
-      <Label layoutX="50.0" layoutY="430.0" text="Password:" />
-      <TextField fx:id="regisUsername" layoutX="131.0" layoutY="336.0" prefHeight="25.0" prefWidth="318.0" promptText="Account name" />
-      <Label layoutX="51.0" layoutY="479.0" text="Date of birth:" />
-      <Label layoutX="52.0" layoutY="520.0" text="Gender:" />
-      <RadioButton fx:id="male" layoutX="131.0" layoutY="520.0" mnemonicParsing="false" onAction="#genderSelect" text="Male">
+      <Label fx:id="regLabel" alignment="CENTER" layoutX="155.0" layoutY="38.0" text="Register:" visible="false">
+         <font>
+            <Font name="iCiel Crocante" size="24.0" />
+         </font></Label>
+      <Label fx:id="userRegLabel" layoutX="24.0" layoutY="103.0" text="Username:" visible="false">
+         <font>
+            <Font name="Malgun Gothic Bold" size="12.0" />
+         </font></Label>
+      <Label fx:id="userRegPassLabel" layoutX="30.0" layoutY="157.0" text="Password:" visible="false">
+         <font>
+            <Font name="Malgun Gothic Bold" size="12.0" />
+         </font></Label>
+      <Label fx:id="userFullNameLabel" layoutX="27.0" layoutY="210.0" text="Full name:" visible="false">
+         <font>
+            <Font name="Malgun Gothic Bold" size="12.0" />
+         </font></Label>
+      <Label fx:id="userRegLocationLabel" layoutX="34.0" layoutY="263.0" text="Location:" visible="false">
+         <font>
+            <Font name="Malgun Gothic Bold" size="12.0" />
+         </font></Label>
+      <Label fx:id="userRegBirthday" layoutX="35.0" layoutY="316.0" text="Birthday:" visible="false">
+         <font>
+            <Font name="Malgun Gothic Bold" size="12.0" />
+         </font></Label>
+      <Label fx:id="userRegGender" layoutX="43.0" layoutY="363.0" text="Gender:" visible="false">
+         <font>
+            <Font name="Malgun Gothic Bold" size="12.0" />
+         </font></Label>
+      <TextField fx:id="regisUsername" layoutX="93.0" layoutY="99.0" prefHeight="23.0" prefWidth="278.0" promptText="Account name" visible="false">
+         <font>
+            <Font name="Malgun Gothic" size="12.0" />
+         </font></TextField>
+      <PasswordField fx:id="regisPassword" layoutX="94.0" layoutY="153.0" prefHeight="24.0" prefWidth="278.0" promptText="At least 8 letters" visible="false">
+         <font>
+            <Font name="Malgun Gothic" size="12.0" />
+         </font></PasswordField>
+      <TextField fx:id="regisFullname" layoutX="94.0" layoutY="206.0" prefHeight="26.0" prefWidth="278.0" promptText="Your real name" visible="false">
+         <font>
+            <Font name="Malgun Gothic" size="12.0" />
+         </font></TextField>
+      <TextField fx:id="regisLocation" layoutX="94.0" layoutY="259.0" prefHeight="26.0" prefWidth="278.0" promptText="Your location" visible="false">
+         <font>
+            <Font name="Malgun Gothic" size="12.0" />
+         </font>
+      </TextField>
+      <DatePicker fx:id="regisDOB" layoutX="96.0" layoutY="312.0" prefHeight="26.0" prefWidth="138.0" visible="false" />
+      <RadioButton fx:id="male" layoutX="99.0" layoutY="363.0" mnemonicParsing="false" onAction="#genderSelect" text="Male" visible="false">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -37,21 +69,68 @@
             <ToggleGroup fx:id="genderr" />
          </toggleGroup>
       </RadioButton>
-      <RadioButton fx:id="female" layoutX="189.0" layoutY="520.0" mnemonicParsing="false" onAction="#genderSelect" text="Female" toggleGroup="$genderr">
+      <RadioButton fx:id="female" layoutX="157.0" layoutY="363.0" mnemonicParsing="false" onAction="#genderSelect" text="Female" toggleGroup="$genderr" visible="false">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
       </RadioButton>
-      <Label layoutX="53.0" layoutY="564.0" text="Location:" />
-      <TextField fx:id="regisLocation" layoutX="131.0" layoutY="560.0" prefHeight="25.0" prefWidth="318.0" promptText="Your location" />
-      <Button layoutX="386.0" layoutY="599.0" mnemonicParsing="false" onAction="#signUp" prefHeight="36.0" prefWidth="74.0" text="Sign up">
+      <Button fx:id="signUpBtn" layoutX="234.0" layoutY="393.0" mnemonicParsing="false" onAction="#signUp" prefHeight="18.0" prefWidth="143.0" text="Sign up" visible="false">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
+         <font>
+            <Font name="Trebuchet MS Bold" size="15.0" />
+         </font>
       </Button>
-      <DatePicker fx:id="regisDOB" layoutX="131.0" layoutY="475.0" />
-      <PasswordField fx:id="regisPassword" layoutX="131.0" layoutY="426.0" prefHeight="25.0" prefWidth="318.0" promptText="At least 8 letters" />
-      <Label layoutX="50.0" layoutY="384.0" text="Full name" />
-      <TextField fx:id="regisFullname" layoutX="131.0" layoutY="380.0" prefHeight="25.0" prefWidth="318.0" promptText="Your real name" />
+      <Button fx:id="loginShowBtn" cacheShape="false" centerShape="false" contentDisplay="TEXT_ONLY" focusTraversable="false" layoutX="102.0" layoutY="446.0" mnemonicParsing="false" onAction="#show" prefHeight="26.0" prefWidth="213.0" scaleShape="false" text="Already have an account? Log in" underline="true" visible="false" wrapText="true">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <font>
+            <Font name="Malgun Gothic Bold" size="12.0" />
+         </font>
+      </Button>
+      <Label fx:id="loginLabel" alignment="CENTER" layoutX="155.0" layoutY="64.0" prefHeight="48.0" prefWidth="107.0" text="Login:">
+         <font>
+            <Font name="iCiel Crocante" size="24.0" />
+         </font></Label>
+      <TextField fx:id="loginUsername" layoutX="63.0" layoutY="115.0" prefHeight="26.0" prefWidth="305.0" promptText="Username">
+         <font>
+            <Font name="Malgun Gothic Bold" size="12.0" />
+         </font></TextField>
+      <PasswordField fx:id="loginPassword" layoutX="63.0" layoutY="151.0" prefHeight="26.0" prefWidth="305.0" promptText="Password">
+         <font>
+            <Font name="Malgun Gothic" size="12.0" />
+         </font></PasswordField>
+      <Button fx:id="loginBtn" layoutX="64.0" layoutY="188.0" mnemonicParsing="false" onAction="#login" prefHeight="26.0" prefWidth="304.0" text="Login">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <font>
+            <Font name="Trebuchet MS Bold" size="15.0" />
+         </font>
+      </Button>
+      <Button fx:id="regShowBtn" cacheShape="false" centerShape="false" contentDisplay="TEXT_ONLY" focusTraversable="false" layoutX="101.0" layoutY="447.0" mnemonicParsing="false" onAction="#show" prefHeight="26.0" prefWidth="214.0" scaleShape="false" text="New to us? Create a new account" underline="true" wrapText="true">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <font>
+            <Font name="Malgun Gothic Bold" size="12.0" />
+         </font></Button>
+      <ImageView fitHeight="486.0" fitWidth="398.0" layoutX="399.0" layoutY="-3.0" pickOnBounds="true">
+         <image>
+            <Image url="@../../../img/bg.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="userImage" fitHeight="24.0" fitWidth="24.0" layoutX="30.0" layoutY="116.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../img/user.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="userPassImage" fitHeight="24.0" fitWidth="24.0" layoutX="31.0" layoutY="151.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../img/padlock.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
