--- a/ProRandomChat/src/main/resources/com/example/prorandomchata/mainStage.fxml
+++ b/ProRandomChat/src/main/resources/com/example/prorandomchata/mainStage.fxml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.Separator?>
-<?import javafx.scene.control.SplitMenuButton?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TreeView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -16,66 +16,72 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.prorandomchata.MainController">
-   <top>
-      <MenuBar BorderPane.alignment="CENTER">
-        <menus>
-          <Menu mnemonicParsing="false" text="File">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Edit">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Delete" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Help">
-            <items>
-              <MenuItem mnemonicParsing="false" text="About" />
-            </items>
-          </Menu>
-        </menus>
-      </MenuBar>
-   </top>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="694.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.prorandomchata.MainController">
    <right>
       <Pane prefHeight="695.0" prefWidth="255.0" BorderPane.alignment="CENTER">
          <children>
-            <Pane prefHeight="127.0" prefWidth="256.0">
+            <Pane prefHeight="147.0" prefWidth="256.0">
                <children>
-                  <Button layoutX="11.0" layoutY="94.0" mnemonicParsing="false" onAction="#viewSelfProfile" prefHeight="26.0" prefWidth="81.0" text="View Profile" />
-                  <Button layoutX="102.0" layoutY="94.0" mnemonicParsing="false" onAction="#logout" prefHeight="26.0" prefWidth="71.0" text="Logout" />
-                  <Label fx:id="userName" layoutX="106.0" layoutY="43.0" prefHeight="17.0" prefWidth="76.0" text="Username" />
-                  <ImageView fx:id="userAvatar" fitHeight="75.0" fitWidth="75.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+                  <Button layoutX="32.0" layoutY="107.0" mnemonicParsing="false" onAction="#viewSelfProfile" prefHeight="26.0" prefWidth="96.0" text="Xem hồ sơ">
+                     <font>
+                        <Font name="BreeSerif" size="12.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor></Button>
+                  <Button layoutX="139.0" layoutY="107.0" mnemonicParsing="false" onAction="#logout" prefHeight="26.0" prefWidth="86.0" text="Đăng xuất">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                     <font>
+                        <Font name="BreeSerif" size="12.0" />
+                     </font></Button>
+                  <Label fx:id="userName" layoutX="122.0" layoutY="46.0" onDragDetected="#viewSelfProfile" prefHeight="32.0" prefWidth="106.0" text="Username">
+                     <font>
+                        <Font name="Broadway" size="15.0" />
+                     </font>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor></Label>
+                  <ImageView fx:id="userAvatar" fitHeight="90.0" fitWidth="90.0" layoutX="11.0" layoutY="10.0" onDragDetected="#viewSelfProfile" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../../../../java/com/example/prorandomchata/Assets/ava.png" />
-                     </image></ImageView>
-                  <Button layoutX="182.0" layoutY="94.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="63.0" text="Settings" />
+                     </image>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor></ImageView>
+                  <Separator layoutX="8.0" layoutY="144.0" prefHeight="4.0" prefWidth="240.0" />
                </children>
             </Pane>
             <Separator layoutY="1.0" orientation="VERTICAL" prefHeight="686.0" prefWidth="4.0" />
-            <Separator layoutX="8.0" layoutY="125.0" prefHeight="4.0" prefWidth="240.0" />
-            <SplitMenuButton layoutX="2.0" layoutY="148.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="252.0" text="Friend List">
-              <items>
-                <MenuItem mnemonicParsing="false" text="Action 1" />
-                <MenuItem mnemonicParsing="false" text="Action 2" />
-              </items>
-            </SplitMenuButton>
+            <TreeView fx:id="treeView" layoutX="5.0" layoutY="150.0" prefHeight="540.0" prefWidth="247.0" />
          </children>
       </Pane>
    </right>
    <center>
       <TabPane fx:id="mainTabPane" prefHeight="695.0" prefWidth="655.0" BorderPane.alignment="CENTER">
         <tabs>
-          <Tab text="Home">
+          <Tab closable="false" text="Trang chủ">
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <Label alignment="CENTER" layoutX="188.0" layoutY="182.0" prefHeight="208.0" prefWidth="268.0" text="HELLO" textAlignment="CENTER">
+                        <ImageView fitHeight="812.0" fitWidth="774.0" layoutX="-3.0" opacity="0.89" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../../img/bg.png" />
+                           </image>
+                        </ImageView>
+                        <Label alignment="CENTER" layoutX="25.0" layoutY="23.0" prefHeight="40.0" prefWidth="718.0" text="Chào mừng đến với Pro Random Chat!" textAlignment="CENTER" textFill="WHITE">
                            <font>
-                              <Font size="28.0" />
+                              <Font name="BreeSerif" size="38.0" />
                            </font>
                         </Label>
+                        <TextArea fx:id="textblock" editable="false" layoutX="93.0" layoutY="80.0" prefHeight="117.0" prefWidth="582.0" text="- Kết nối và nhắn tin ngẫu nhiên với người dùng đang online (theo tiêu chí).&#10;- Chức năng kết bạn và thông báo tin nhắn mới đang được cập nhật.&#10;- Một sản phẩm from ProPTIT D22 Bùi Thế Vĩnh Nguyên with love.&#10;- Mọi góp ý liên hệ: vinhnguyenbuithe.work@gmail.com&#10;">
+                           <font>
+                              <Font name="Calibri" size="15.0" />
+                           </font>
+                           <opaqueInsets>
+                              <Insets />
+                           </opaqueInsets></TextArea>
                      </children></AnchorPane>
             </content>
           </Tab>
