--- a/ProRandomChat/src/main/resources/com/example/prorandomchata/profileTab.fxml
+++ b/ProRandomChat/src/main/resources/com/example/prorandomchata/profileTab.fxml
@@ -3,27 +3,75 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="666.0" prefWidth="760.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.prorandomchata.ProfileTabController">
    <children>
-      <Label layoutX="98.0" layoutY="99.0" text="Username:" />
-      <Label layoutX="98.0" layoutY="184.0" text="Age:" />
-      <Label fx:id="userGender" layoutX="272.0" layoutY="184.0" text="Gender" />
-      <Label layoutX="98.0" layoutY="238.0" text="Location:" />
+      <Label layoutX="45.0" layoutY="96.0" text="Tên người dùng:">
+         <font>
+            <Font name="iCiel Nabila" size="14.0" />
+         </font></Label>
+      <Label layoutX="117.0" layoutY="209.0" text="Tuổi:">
+         <font>
+            <Font name="iCiel Nabila" size="14.0" />
+         </font></Label>
+      <Label fx:id="userGender" layoutX="327.0" layoutY="206.0" text="Gender" textFill="#007eff">
+         <font>
+            <Font name="iCiel Crocante" size="18.0" />
+         </font></Label>
+      <Label layoutX="108.0" layoutY="263.0" text="Vị trí:">
+         <font>
+            <Font name="iCiel Nabila" size="14.0" />
+         </font></Label>
       <ImageView fx:id="userAvatar" fitHeight="235.0" fitWidth="235.0" layoutX="440.0" layoutY="84.0" pickOnBounds="true" preserveRatio="true" />
-      <Button fx:id="addFriendBtn" layoutX="429.0" layoutY="333.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="81.0" text="Add Friend" />
-      <Button fx:id="sendMessageBtn" layoutX="517.0" layoutY="333.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="81.0" text="Message" />
-      <Button fx:id="blockBtn" layoutX="606.0" layoutY="333.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="81.0" text="Block" />
-      <Label layoutX="95.0" layoutY="373.0" text="User description:" />
-      <TextArea fx:id="userDescription" layoutX="107.0" layoutY="399.0" prefHeight="200.0" prefWidth="544.0" />
-      <TextField fx:id="userName" layoutX="164.0" layoutY="95.0" />
-      <Label fx:id="userAge" layoutX="130.0" layoutY="184.0" text="Age" />
-      <Label layoutX="223.0" layoutY="184.0" text="Gender:" />
-      <Label layoutX="96.0" layoutY="142.0" text="Fullname:" />
-      <TextField fx:id="userFullname" layoutX="164.0" layoutY="138.0" />
-      <TextField fx:id="userLocation" layoutX="164.0" layoutY="234.0" />
+      <Button fx:id="addFriendBtn" layoutX="429.0" layoutY="333.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="81.0" text="Kết bạn">
+         <font>
+            <Font name="iCielMijas-Ultra" size="16.0" />
+         </font></Button>
+      <Button fx:id="sendMessageBtn" layoutX="517.0" layoutY="333.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="81.0" text="Nhắn tin">
+         <font>
+            <Font name="iCielMijas-Ultra" size="16.0" />
+         </font></Button>
+      <Button fx:id="blockBtn" layoutX="606.0" layoutY="333.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="81.0" text="Chặn">
+         <font>
+            <Font name="iCielMijas-Ultra" size="16.0" />
+         </font></Button>
+      <Label layoutX="94.0" layoutY="370.0" text="Mô tả:">
+         <font>
+            <Font name="iCiel Nabila" size="18.0" />
+         </font></Label>
+      <TextArea fx:id="userDescription" layoutX="107.0" layoutY="399.0" prefHeight="200.0" prefWidth="544.0">
+         <font>
+            <Font name="iCiel Crocante" size="12.0" />
+         </font></TextArea>
+      <Label fx:id="userAge" layoutX="170.0" layoutY="206.0" text="Age" textFill="#007eff">
+         <font>
+            <Font name="iCiel Crocante" size="18.0" />
+         </font></Label>
+      <Label layoutX="256.0" layoutY="208.0" text="Giới tính:">
+         <font>
+            <Font name="iCiel Nabila" size="14.0" />
+         </font></Label>
+      <Label layoutX="81.0" layoutY="157.0" text="Họ và Tên:">
+         <font>
+            <Font name="iCiel Nabila" size="14.0" />
+         </font></Label>
+      <Label fx:id="userName" layoutX="171.0" layoutY="93.0" text="Label" textFill="#007eff">
+         <font>
+            <Font name="iCiel Crocante" size="18.0" />
+         </font>
+      </Label>
+      <Label fx:id="userFullname" layoutX="170.0" layoutY="154.0" text="Label" textFill="#007eff">
+         <font>
+            <Font name="iCiel Crocante" size="18.0" />
+         </font>
+      </Label>
+      <Label fx:id="userLocation" layoutX="171.0" layoutY="260.0" text="Label" textFill="#007eff">
+         <font>
+            <Font name="iCiel Crocante" size="18.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
